--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 config = {
-"url":"https://localhost:8888",
-"redirect_url":"https://localhost:8888/login.html",
+"uri":"https://localhost:8888",
+"redirect_uri":"https://localhost:8888/login.html",
 "client_id":"[YOUR_TOKEN_HERE]",
 "slowdown_import": 100,
 "slowdown_export": 100
